okay initial values are now not resetiing when the button is pressed needs fixing

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <div class="tower" id="tower2"></div>
     <div class="tower" id="tower3"></div>
 </div>
+<div class="controls">
+    <button onclick="addDisk(4)">Add 4th Disk</button>
+    <button onclick="addDisk(5)">Add 5th Disk</button>
+    <button onclick="resetGame()">Reset</button>
+</div>
+
 
 <script src="script.js"></script>
 </body>
