--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <div id="winBanner" style="display:none; text-align:center; background-color: gold; padding: 20px; font-size: 24px;">
+        Congratulations! You've won!
+    </div>
+    
 <div class="game-board">
     <div class="tower" id="tower1">
         <div class="disk" id="disk3" draggable="true"></div>
