--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="game">
     <div id="winBanner" style="display:none; text-align:center; background-color: gold; padding: 20px; font-size: 24px;">
         Congratulations! You've won!
     </div>
@@ -24,6 +25,7 @@
     <button onclick="addDisk(4)">Add 4th Disk</button>
     <button onclick="addDisk(5)">Add 5th Disk</button>
     <button onclick="resetGame()">Reset</button>
+</div>
 </div>
 
 
