--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="game">
-    <div id="winBanner" style="display:none; text-align:center; background-color: gold; padding: 20px; font-size: 24px;">
+    <div id="winBanner" style="display:none; text-align:center; padding: 20px; font-size: 24px;">
         Congratulations! You've won!
     </div>
     
