Added more styling changes also added how to play button, not sure if I should use a popup or maybe display some rules list beneath

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="game">
+        <h1>Towers Of Hanoi</h1>
     <div id="winBanner" style="display:none; text-align:center; padding: 20px; font-size: 24px;">
         Congratulations! You've won!
     </div>
@@ -25,6 +26,7 @@
     <button onclick="addDisk(4)">Add 4th Disk</button>
     <button onclick="addDisk(5)">Add 5th Disk</button>
     <button onclick="resetGame()">Reset</button>
+    <button>How To Play</button>
 </div>
 </div>
 
