added more changes to modal styling, clicking the border of the modal should close it, need to add functionality for clicking anywhere outside the modal also closes it

--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
       
       <p><strong>Tip:</strong> For an even number of discs, make the first move to the middle peg. For an odd number of discs, make the first move to the rightmost peg.</p>
       
-      <p>Good luck!</p>
-        <button onclick="closeModal()">Close</button>
+        <button id="modalClose" onclick="closeModal()">Close</button>
     </div>
 </div>
 
