changed main h1 styling, added text shadow

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </div>
 <div id="modal-1" class="jw-modal">
     <div class="jw-modal-body">
-      ` <h2>Towers of Hanoi: Quick Overview</h2>
+      ` <h2>Towers Of Hanoi Quick Overview</h2>
     
       <h3>Goal:</h3>
       <p>Move all the discs from the leftmost peg to the rightmost peg.</p>
