--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Towers of Hanoi</title>
+    <link rel="icon" type="image/x-icon" href="/public/favicon.ico" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -28,7 +29,7 @@
     <button onclick="addDisk(5)">Add 5th Disk</button>
     <button onclick="resetGame()">Reset</button>
     <button  onclick="openModal('modal-1')">How To Play</button>
-</div>
+</div>null
 </div>
 <div id="modal-1" class="jw-modal">
     <div class="jw-modal-body">
