removed unwanted text from html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <button onclick="addDisk(5)">Add 5th Disk</button>
     <button onclick="resetGame()">Reset</button>
     <button  onclick="openModal('modal-1')">How To Play</button>
-</div>null
+</div>
 </div>
 <div id="modal-1" class="jw-modal">
     <div class="jw-modal-body">
