changed default color of discs, adding contrast

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <button onclick="addDisk(4)">Add 4th Disk</button>
         <button onclick="addDisk(5)">Add 5th Disk</button>
         <button onclick="resetGame()">Reset</button>
-        <button onclick="openModal('modal-1')">How To Play</button>
+        <button class="how-to-play-btn" onclick="openModal('modal-1')">How To Play</button>
       </div>
     </div>
     <div id="modal-1" class="jw-modal">
